timeline delete functionality added

--- a/trainer/templates/trainer/footer.html
+++ b/trainer/templates/trainer/footer.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="text-right">
                             <button class="btn btn-message">Add</button>
-                            <button class="btn btn-link">Cancel</button>
+                            <!--<button class="btn btn-link">Cancel</button>-->
                         </div>
                     </form>
                 </div>
