--- a/trainer/templates/trainer/user_listing.html
+++ b/trainer/templates/trainer/user_listing.html
@@ -15,7 +15,7 @@
 		</button>
 		  <ul class="dropdown-menu">
 		    <li><a href="#">Highest Rated</a></li>
-		    <li><a href="#">Lowest Rated</a></li>
+		    <li><a href="#">Most Hours</a></li>
 		  </ul>
 		</div>
   	</div>
