--- a/trainer/templates/trainer/edit_profile.html
+++ b/trainer/templates/trainer/edit_profile.html
@@ -72,7 +72,11 @@
                                                     <td>{{timeline.trainee_cnt}}</td>
                                                     <td>
                                                         <!--<button class="btn btn-edit"><i class="icon icon-mode_edit"></i></button>-->
-                                                        <button class="btn btn-delete"><i class="icon icon-delete"></i></button>
+                                                        <form action="{% url 'trainer:timeline-delete' timeline.id %}" method="post">
+                                                            {% csrf_token %}
+                                                            <input type="hidden" name="timeline_id" value="{{ timeline.id }}">
+                                                            <button class="btn btn-delete"><i class="icon icon-delete"></i></button>
+                                                        </form>
                                                     </td>
                                                 </tr>
                                                 {% endfor %}
