--- a/trainer/templates/trainer/navbar.html
+++ b/trainer/templates/trainer/navbar.html
@@ -30,8 +30,7 @@
         <li><a href="#"><span class="icon-notifications"><div class="badge">5</div></span></a></li>
         <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            <div class="user-pic" style="background: url('/static/trainer/img/user.jpg') center no-repeat;"></div>
-        	<!--<div class="user-pic" style="background: url('/media/{{user_id}}') center no-repeat;"></div>-->
+        	<div class="user-pic" style="background: url('/media/{{user_id}}{{user.profile_set.all.0.photo}}') center no-repeat;"></div>
         </a>
         <ul class="dropdown-menu">
             <li><a href="{% url 'trainer:update' %}">Edit Profile</a></li>
