--- a/trainer/templates/trainer/edit_profile.html
+++ b/trainer/templates/trainer/edit_profile.html
@@ -96,7 +96,10 @@
                                         <div class="col-sm-4">
                                             <a data-toggle="modal" data-target="#addCompany" class="no-decoration">
                                                 <div class="exist-training-container">
-                                                    <div class="train-header"><h3>{{experience.organization}}</h3></div>
+                                                    <div class="train-header">
+                                                        <h3>{{experience.organization}}</h3>
+                                                        <button class="btn btn-delete pull-right"><i class="fa fa-trash"></i></button>
+                                                    </div>
                                                     <table class="table table-default table-borderless-border">
                                                         <tbody>
                                                             <tr>
