--- a/trainer/templates/trainer/detail.html
+++ b/trainer/templates/trainer/detail.html
@@ -3,139 +3,147 @@
 {% block body %}
 <div class="container">
     <div class="row">
-    <!------------------------Left Sidebar-------------------->
+        <!------------------------Left Sidebar-------------------->
         <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12 sticky">
-          <div class="left-panel">
+            <div class="left-panel">
 
-            <div class="upper-user-details">
-              <div class="main-pic" style="background-image: url({{profile.photo.url}});"></div>
-            </div>
-            <div class="skill-table">
-                <table class="table table-default">
-                    <thead>
+                <div class="upper-user-details">
+                    <div class="main-pic" style="background-image: url({{profile.photo.url}});"></div>
+                </div>
+                <div class="skill-table">
+                    <table class="table table-default">
+                        <thead>
                         <tr>
                             <th>SKILLS</th>
-                            <th class="text-right"><small>(Hrs of Training given)</small></th>
+                            <th class="text-right">
+                                <small>(Hrs of Training given)</small>
+                            </th>
                         </tr>
-                    </thead>
-                    <tbody>
+                        </thead>
+                        <tbody>
                         {% for skill in profile.skill_set.all %}
-                            <tr>
-                                <td class="skill">{{skill.title}}</td>
-                                <td class="text-right"><label class="label label-primary label-corp">{{skill.hours}} hrs</label></td>
-                            </tr>
+                        <tr>
+                            <td class="skill">{{skill.title}}</td>
+                            <td class="text-right"><label class="label label-primary label-corp">{{skill.hours}} hrs</label></td>
+                        </tr>
                         {% endfor %}
-                    </tbody>
-                </table>
-                <div class="text-right more-skills">
-                    <a href="" data-toggle="modal" data-target="#allSkills">+ 24 Skills</a>
+                        </tbody>
+                    </table>
+                    <div class="text-right more-skills">
+                        <a href="" data-toggle="modal" data-target="#allSkills">+ 24 Skills</a>
+                    </div>
                 </div>
-            </div>
 
-          </div>
+            </div>
         </div>
 
         <!------------------------Mid Section-------------------->
         <div class="col-md-8 col-lg-8 col-sm-12 col-xs-12">
             <div class="middle-section">
                 <div class="ratings pull-right">
-                        <h5>RATINGS</h5>
-                        <ul class="star-container" type="none">
-                            <li><i class="icon-star star-filled"></i></li><li><i class="icon-star star-filled"></i></li><li><i class="icon-star star-filled"></i></li><li><i class="icon-star star-filled"></i></li><li><i class="icon-star"></i></li>
-                        </ul>
-                    </div>
+                    <h5>RATINGS</h5>
+                    <ul class="star-container" type="none">
+                        <li><i class="icon-star star-filled"></i></li>
+                        <li><i class="icon-star star-filled"></i></li>
+                        <li><i class="icon-star star-filled"></i></li>
+                        <li><i class="icon-star star-filled"></i></li>
+                        <li><i class="icon-star"></i></li>
+                    </ul>
+                </div>
                 <div class="heading-text">
                     <h3>{{profile.user.first_name}} {{profile.user.last_name}}
                         <small><i
-                            class="icon-person_pin_circle"></i>
-                        {{profile.country}}</small></h3>
+                                class="icon-person_pin_circle"></i>
+                            {{profile.country}}
+                        </small>
+                    </h3>
                     <h5>Corporate Trainer</h5>
                 </div>
-                <button class="btn btn-message"  data-toggle="modal" data-target="#message-modal">
+                <button class="btn btn-message" data-toggle="modal" data-target="#message-modal">
                     <i class="icon-chat_bubble"></i>&nbsp; Send Message
                 </button>
             </div>
 
             <div class="tab-section">
                 <ul class="nav nav-tabs flat-tabs">
-                  <li class="active"><a data-toggle="tab" href="#timeline"><i class="icon-visibility"></i> Timeline</a></li>
-                  <li><a data-toggle="tab" href="#trainings"><i class="icon-insert_invitation"></i> Scheduled Trainings</a></li>
-                  <li><a data-toggle="tab" href="#work"><i class="icon-card_travel"></i> Work Experience</a></li>
-                  <li><a data-toggle="tab" href="#about"><i class="icon-person"></i> About</a></li>
+                    <li class="active"><a data-toggle="tab" href="#timeline"><i class="icon-visibility"></i> Timeline</a></li>
+                    <li><a data-toggle="tab" href="#trainings"><i class="icon-insert_invitation"></i> Scheduled Trainings</a></li>
+                    <li><a data-toggle="tab" href="#work"><i class="icon-card_travel"></i> Work Experience</a></li>
+                    <li><a data-toggle="tab" href="#about"><i class="icon-person"></i> About</a></li>
                 </ul>
 
                 <!----------Timeline------------------------->
                 <div class="tab-content">
-                  <div id="timeline" class="tab-pane fade in active">
-                    <div class="info-sections">
-                        <h4>RECENT TRAININGS</h4>
-                        <div class="row">
-                            {% for tl in detail_timeline %}
-                            <div class="timeline-centered">
-                                <article class="timeline-entry">
+                    <div id="timeline" class="tab-pane fade in active">
+                        <div class="info-sections">
+                            <h4>RECENT TRAININGS</h4>
+                            <div class="row">
+                                {% for tl in detail_timeline %}
+                                <div class="timeline-centered">
+                                    <article class="timeline-entry">
 
-                                    <div class="timeline-entry-inner">
-                                        <div class="timeline-time"><span>{{tl.from_date}}</span></div>
+                                        <div class="timeline-entry-inner">
+                                            <div class="timeline-time"><span>{{tl.from_date}}</span></div>
 
-                                        <div class="timeline-icon">
-                                        </div>
-
-                                        <div class="timeline-label">
-                                            <div class="company-logo" style="background-image: url(img/freestone.png);">
+                                            <div class="timeline-icon">
                                             </div>
-                                            <div class="timeline-table-container">
-                                            <table class="table table-default table-timeline">
-                                                <caption>{{tl.organization}}</caption>
-                                                <tbody>
-                                                    <tr>
-                                                        <td class="label-table">Duration:</td>
-                                                        <td>{{tl.hours}} Hour(s)</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="label-table">Attendants:</td>
-                                                        <td>{{tl.trainee_cnt}}</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="label-table">Technologies:</td>
-                                                        <td>{{tl.}}</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
+
+                                            <div class="timeline-label">
+                                                <div class="company-logo" style="background-image: url(img/freestone.png);">
+                                                </div>
+                                                <div class="timeline-table-container">
+                                                    <table class="table table-default table-timeline">
+                                                        <caption>{{tl.organization}}</caption>
+                                                        <tbody>
+                                                        <tr>
+                                                            <td class="label-table">Duration:</td>
+                                                            <td>{{tl.hours}} Hour(s)</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="label-table">Attendants:</td>
+                                                            <td>{{tl.trainee_cnt}}</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="label-table">Technologies:</td>
+                                                            <td>{{tl.}}</td>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </article>
+                                    </article>
+                                </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+
+                    <!----------Trainings------------------------->
+                    <div id="trainings" class="tab-pane fade">
+                        <h3>Calender will appear here</h3>
+                    </div>
+
+                    <!----------Work Experience------------------------->
+                    <div id="work" class="tab-pane fade">
+                        <div class="info-sections">
+                            <h4>WORK EXPERIENCE</h4>
+                            {% for ex in detail_experience %}
+                            <div class="work-container">
+                                <h5>{{ex.organization}}</h5>
+                                <small>{{ex.from_month}} {{ex.from_year}} - {{ex.to_month}} {{ex.to_year}}</small>
+                                <p>{{ex.desc}}</p>
                             </div>
                             {% endfor %}
                         </div>
                     </div>
-                  </div>
 
-                  <!----------Trainings------------------------->
-                  <div id="trainings" class="tab-pane fade">
-                    <h3>Calender will appear here</h3>
-                  </div>
-
-                  <!----------Work Experience------------------------->
-                  <div id="work" class="tab-pane fade">
-                    <div class="info-sections">
-                        <h4>WORK EXPERIENCE</h4>
-                        {% for ex in detail_experience %}
-                            <div class="work-container">
-                            <h5>{{ex.organization}}</h5>
-                            <small>{{ex.from_month}} {{ex.from_year}} - {{ex.to_month}} {{ex.to_year}}</small>
-                            <p>{{ex.desc}}</p>
-                        </div>
-                        {% endfor %}
-                    </div>
-                  </div>
-
-                  <!----------About------------------------->
-                  <div id="about" class="tab-pane fade">
-                    <div class="info-sections">
-                        <h4>CONTACT INFORMATION</h4>
-                        <table class="table table-default table-borderless">
-                            <tbody>
+                    <!----------About------------------------->
+                    <div id="about" class="tab-pane fade">
+                        <div class="info-sections">
+                            <h4>CONTACT INFORMATION</h4>
+                            <table class="table table-default table-borderless">
+                                <tbody>
                                 <tr>
                                     <td class="label-table">Email:</td>
                                     <td><a>{{profile.email}}</a></td>
@@ -156,13 +164,13 @@
                                     <td class="label-table">Address:</td>
                                     <td>{{profile.address}}</td>
                                 </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="info-sections">
-                        <h4>PERSONAL INFORMATION</h4>
-                        <table class="table table-default table-borderless">
-                            <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="info-sections">
+                            <h4>PERSONAL INFORMATION</h4>
+                            <table class="table table-default table-borderless">
+                                <tbody>
                                 <tr>
                                     <td class="label-table">Birthday:</td>
                                     <td>{{profile.birth_date}}</td>
@@ -171,10 +179,51 @@
                                     <td class="label-table">Gender:</td>
                                     <td>{{profile.gender}}</td>
                                 </tr>
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
-                  </div>
+
+                    <!-- Modal Send Message-->
+                    <div id="message-modal" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Send Message</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <form method="post" action="">
+                                        {% csrf_token %}
+                                        <div class="form-group">
+                                            <label>Type your message:</label>
+                                            <textarea class="form-control" placeholder="Provide requirement details like type of training, skills, location, number of days, number of attendants"
+                                                      rows="5"></textarea>
+                                        </div>
+                                        <div class="row">
+                                            <div class="form-group col-sm-6">
+                                                <label>Contact Number:</label>
+                                                <input type="text" name="" class="form-control">
+                                            </div>
+                                            <div class="form-group col-sm-6">
+                                                <label>Email:</label>
+                                                <input type="email" name="" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="text-right">
+                                            <button class="btn btn-link">Cancel</button>
+                                            <button class="btn btn-message">
+                                                Send
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
 
