--- a/trainer/templates/trainer/header.html
+++ b/trainer/templates/trainer/header.html
@@ -1,11 +1,12 @@
 {% load static %}
-
-<title>User Profile</title>
+<title>Train Our Staff</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{% static 'trainer/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'trainer/css/corporate.css' %}">
+<link rel="stylesheet" href="{% static 'trainer/css/landing.css' %}">
 <link rel="stylesheet" href="{% static 'trainer/css/style.css' %}">
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
