--- a/trainer/templates/trainer/index.html
+++ b/trainer/templates/trainer/index.html
@@ -1,21 +1,155 @@
 {% extends 'trainer/base.html' %}
+{% load static %}
 
 {% block body %}
-<h1>Home</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
-<h2>{{search}}</h2>
+    <!---- Loader ---->
+    <div class="spinner-wrapper">
+        <div class="spinner">
+            <div class="double-bounce1"></div>
+            <div class="double-bounce2"></div>
+        </div>
+    </div>
+    <div class="banner" id="home">
+        <nav class="navbar navbar-default landing-header-section">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <div class="navbar-brand logo-cntnr"><img src="{% static 'trainer/img/logo.png' %}" class="img-responsive"></div>
+                    </div>
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav navbar-right navbar-menu">
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#about">About us</a></li>
+                            <li><a href="#work">How it works</a></li>
+                            <li><a href="{% url 'trainer:register' %}" class="btn btn-message">I'm a trainer</a></li>
+                        </ul>
+                    </div>
+                </div>
+        </nav>
+        <div class="banner-content container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="banner-title stick-left">
+                        <h1>FIND A TRAINER</h1>
+                        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
+                        <div class="input-group">
+                            <input type="text" class="form-control searchbox" placeholder="i.e Name, Technology..." aria-describedby="basic-addon2">
+                            <span class="btn input-group-addon btn-input-search" id="basic-addon2" type="button"><i class="icon-search"></i></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="hidden-sm hidden-xs">
+                    <img src="{% static 'trainer/img/laptop.png' %}" class="img-responsive stick-right">
+      </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="about-wrapper" id="about">
+                <div class="landing-heading">
+                    <h2>ABOUT US</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-6" data-aos="fade-right" data-aos-duration="1000">
+                        <img src="{% static 'trainer/img/icons.png' %}" class="img-responsive tablet-img">
+      </div>
+                        <div class="col-sm-12 col-md-6 col-lg-6" data-aos="fade-left" data-aos-duration="1500">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                                totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="gradient-wrapper">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-4 col-lg-4 count" data-aos="zoom-in-right">
+                            <img src="{% static 'trainer/img/employee.png' %}">
+                            <span>Over 12,000 trainers</span>
+                        </div>
+                        <div class="col-sm-12 col-md-4 col-lg-4 count" data-aos="zoom-in">
+                            <img src="{% static 'trainer/img/target.png' %}">
+                            <span>To the point training</span>
+                        </div>
+                        <div class="col-sm-12 col-md-4 col-lg-4 count" data-aos="zoom-in-left">
+                            <img src="{% static 'trainer/img/growth.png' %}">
+                            <span>Grow your business</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="work-wrapper" id="work">
+                <div class="container">
+                    <div class="landing-heading">
+                        <h2>HOW IT WORKS</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6" data-aos="fade-down" data-aos-duration="1000">
+                            <h4>#1 SEARCH TRAINER</h4>
+                            <img src="{% static 'trainer/img/Service1.png' %}" class="img-responsive">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        </div>
+                        <div class="col-sm-6" data-aos="fade-up" data-aos-duration="1000">
+                            <h4>#2 SELECT SUITABLE CANDIDATE</h4>
+                            <img src="{% static 'trainer/img/Service2.png' %}" class="img-responsive">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6" data-aos="fade-down" data-aos-duration="1500">
+                            <h4>#3 GET TRAINING</h4>
+                            <img src="{% static 'trainer/img/Service3.png' %}" class="img-responsive">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        </div>
+                        <div class="col-sm-6" data-aos="fade-up" data-aos-duration="1500">
+                            <h4>#4 MAKE A PAYMENT</h4>
+                            <img src="{% static 'trainer/img/Service4.png' %}" class="img-responsive">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button class="btn btn-message-big">Get Started</button>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="testimonial-wrapper">
+                    <div class="row">
+                        <div class="col-sm-11 col-sm-offset-1">
+                            <div class="col-sm-5" data-aos="fade-down" data-aos-duration="1000">
+                                <div>
+                                    <img src="{% static 'trainer/img/quote.png' %}" class="width-40">
+                                    <p>The ultimate goal is to produce quality and pixel
+                                        perfect UI everytime, by following latest desig
+                                        trends and current market demands and that
+                                        also keeping end users in mind. </p>
+                                    <div class="client-name">
+                                        - Kalpesh Tawade
+                                        <div class="client-designation">Founder & CEO</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-5 col-sm-offset-1" data-aos="fade-up" data-aos-duration="1000">
+                                <div>
+                                    <img src="{% static 'trainer/img/quote.png' %}" class="width-40">
+                                    <p>The ultimate goal is to produce quality and pixel
+                                        perfect UI everytime, by following latest desig
+                                        trends and current market demands and that
+                                        also keeping end users in mind. </p>
+                                    <div class="client-name">
+                                        - Kalpesh Tawade
+                                        <div class="client-designation">Founder & CEO</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
