--- a/trainer/templates/trainer/script.html
+++ b/trainer/templates/trainer/script.html
@@ -2,6 +2,8 @@
 
 <script src="{% static 'trainer/js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'trainer/js/bootstrap.min.js' %}"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="{% static 'trainer/js/staff.js' %}"></script>
 <script type="text/javascript">
 		$(document).ready(function(){
 		    $('.dropdown-menu a').click(function(){
