--- a/trainer/templates/trainer/header.html
+++ b/trainer/templates/trainer/header.html
@@ -3,7 +3,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{% static 'trainer/css/bootstrap.min.css' %}">
-<link rel="stylesheet" href="{% static 'trainer/css/corporate.css' %}">
+{% if request.path != "/trainer/" %}
+    <link rel="stylesheet" href="{% static 'trainer/css/corporate.css' %}">
+{% endif %}
 <link rel="stylesheet" href="{% static 'trainer/css/landing.css' %}">
 <link rel="stylesheet" href="{% static 'trainer/css/style.css' %}">
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
