datetime added in migration

--- a/trainer/templates/trainer/index.html
+++ b/trainer/templates/trainer/index.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="hidden-sm hidden-xs">
-                    <img src="{% static 'trainer/img/laptop.png' %}" class="img-responsive stick-right">
+                    <img src="{% static 'trainer/img/Laptop.png' %}" class="img-responsive stick-right">
       </div>
                 </div>
             </div>
