--- a/trainer/templates/trainer/login.html
+++ b/trainer/templates/trainer/login.html
@@ -14,7 +14,7 @@
               <div class="col-sm-12">
                 <div class="form-group icon-group-user">
                   {{form.visible_fields.0}}
-                  {{form.email.errors}}
+                  {{form.username.errors}}
                 </div>
               </div>
             </div>
@@ -22,7 +22,7 @@
               <div class="col-sm-12">
                 <div class="form-group icon-group-user">
                   {{form.visible_fields.1}}
-                  {{form.email.errors}}
+                  {{form.username.errors}}
                 </div>
               </div>
             </div>
