--- a/trainer/templates/trainer/script.html
+++ b/trainer/templates/trainer/script.html
@@ -4,6 +4,7 @@
 <script src="{% static 'trainer/js/bootstrap.min.js' %}"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="{% static 'trainer/js/staff.js' %}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 <script type="text/javascript">
 		$(document).ready(function(){
 		    $('.dropdown-menu a').click(function(){
