message view with rest api is added

--- a/trainer/templates/trainer/header.html
+++ b/trainer/templates/trainer/header.html
@@ -12,3 +12,36 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<style type="text/css">
+    .message-heading{
+      background-color: #fff !important;
+    padding: 18px 24px;
+    border-top: 1px solid #e0e0e0;
+    }
+    .message-heading.unread{
+      background-color: #e4e4e4 !important;
+    }
+    .message-time{
+    	font-size: 12px;
+    	color: #333;
+    }
+    .message-heading h5 {
+    color: #02715b;
+    font-weight: 600;
+    font-size: 16px;
+}
+a.message-subject{
+	width: 50%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    display: block;
+    float: left;
+}
+    ul.message-listing li{
+      margin-bottom: 10px;
+    }
+    ul.message-listing li b{
+      display: block;
+    }
+</style>
