--- a/trainer/templates/trainer/navbar.html
+++ b/trainer/templates/trainer/navbar.html
@@ -27,7 +27,7 @@
 			</div>
         </li>
         {% if user.is_authenticated %}
-        <li><a href="#"><span class="icon-notifications"><div class="badge">5</div></span></a></li>
+        <li><a href="{% url 'trainer:inbox' %}"><span class="icon-notifications"><div class="badge">5</div></span></a></li>
         <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
         	<div class="user-pic" style="background: url('/media/{{user_id}}{{user.profile_set.all.0.photo}}') center no-repeat;"></div>
