--- a/trainer/templates/trainer/inbox.html
+++ b/trainer/templates/trainer/inbox.html
@@ -19,18 +19,17 @@
   	</div>
   </div>
 
-  <div ng-repeat="msg in messageList track by $index">
+  <div ng-repeat="msg in messageList">
   <div class="profile-listing">
     <div class="panel-group" id="accordion">
       <div class="panel panel-default">
         <div class="panel-heading message-heading unread">
           <h5 class="panel-title">
-              [[msg.msgText]]
             <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="message-subject">
-
+            <span ng-bind="msg.msgText"></span>
             </a>
-            <span  ng-bind="msg.msgText" class="pull-right message-time">
-
+            <span class="pull-right message-time">
+            	{{msg.msgDateTime}}
             </span>
             <div class="clearfix"></div>
           </h5>
