--- a/trainer/templates/trainer/detail.html
+++ b/trainer/templates/trainer/detail.html
@@ -1,4 +1,6 @@
 {% extends 'trainer/base.html' %}
+{% load static %}
+
 
 {% block body %}
 <div class="container">
@@ -184,6 +186,7 @@
                         </div>
                     </div>
 
+                    <div class="container" ng-app="message" ng-controller="messageController">
                     <!-- Modal Send Message-->
                     <div id="message-modal" class="modal fade" role="dialog">
                         <div class="modal-dialog">
@@ -195,8 +198,6 @@
                                     <h4 class="modal-title">Send Message</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <form method="post" action="">
-                                        {% csrf_token %}
                                         <div class="form-group">
                                             <label>Type your message:</label>
                                             <textarea class="form-control" placeholder="Provide requirement details like type of training, skills, location, number of days, number of attendants"
@@ -214,15 +215,15 @@
                                         </div>
                                         <div class="text-right">
                                             <button class="btn btn-link">Cancel</button>
-                                            <button class="btn btn-message">
+                                            <button class="btn btn-message" ng-click="sendMsg()">
                                                 Send
                                             </button>
                                         </div>
-                                    </form>
                                 </div>
 
                             </div>
                         </div>
+                    </div>
                     </div>
                 </div>
 
