--- a/trainer/templates/trainer/script.html
+++ b/trainer/templates/trainer/script.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+{% csrf_token %}
 <script src="{% static 'trainer/js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'trainer/js/bootstrap.min.js' %}"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -12,4 +12,5 @@
 		    $('#selected').text($(this).text());
 		  });
 		});
+		var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
 </script>
