--- a/trainer/templates/trainer/index.html
+++ b/trainer/templates/trainer/index.html
@@ -30,9 +30,10 @@
                     </div>
                 </div>
         </nav>
+
         <div class="banner-content container">
             <div class="row">
-                <div class="col-sm-12 col-md-6" data-aos="fade-up" data-aos-duration="1500">
+                <div class="col-sm-12 col-md-5" data-aos="fade-up" data-aos-duration="1500">
                     <div class="banner-title stick-left">
                         <h1>FIND A TRAINER</h1>
                         <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
@@ -42,11 +43,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="hidden-sm hidden-xs">
-                    <img src="{% static 'trainer/img/Laptop.png' %}" class="img-responsive stick-right">
+                <div class="hidden-sm hidden-xs col-md-7 banner-image">
+                    <img src="{% static 'trainer/img/Laptop_small.png' %}" class="img-responsive">
       </div>
                 </div>
             </div>
+
         </div>
         <div class="container">
             <div class="about-wrapper" id="about">
