--- a/trainer/templates/trainer/detail.html
+++ b/trainer/templates/trainer/detail.html
@@ -23,9 +23,9 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for skill in profile.skill_set.all %}
+                        {% for tech in detail_timeline %}
                         <tr>
-                            <td class="skill">{{skill.title}}</td>
+                            <td class="skill">{{tech.technology}}</td>
                             <td class="text-right"><label class="label label-primary label-corp">{{skill.hours}} hrs</label></td>
                         </tr>
                         {% endfor %}
@@ -107,7 +107,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td class="label-table">Technologies:</td>
-                                                            <td>{{tl.}}</td>
+                                                            <td>{{tl.technology}}</td>
                                                         </tr>
                                                         </tbody>
                                                     </table>
@@ -185,46 +185,7 @@
                             </table>
                         </div>
                     </div>
-
-                    <div class="container" ng-app="message" ng-controller="messageController">
-                    <!-- Modal Send Message-->
-                    <div id="message-modal" class="modal fade" role="dialog">
-                        <div class="modal-dialog">
-
-                            <!-- Modal content-->
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Send Message</h4>
-                                </div>
-                                <div class="modal-body">
-                                        <div class="form-group">
-                                            <label>Type your message:</label>
-                                            <textarea class="form-control" placeholder="Provide requirement details like type of training, skills, location, number of days, number of attendants"
-                                                      rows="5"></textarea>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-sm-6">
-                                                <label>Contact Number:</label>
-                                                <input type="text" name="" class="form-control">
-                                            </div>
-                                            <div class="form-group col-sm-6">
-                                                <label>Email:</label>
-                                                <input type="email" name="" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="text-right">
-                                            <button class="btn btn-link">Cancel</button>
-                                            <button class="btn btn-message" ng-click="sendMsg()">
-                                                Send
-                                            </button>
-                                        </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    </div>
+                    {% include 'trainer/send_message.html' %}
                 </div>
 
 
