Scheduled Trainings tab turned off

--- a/trainer/templates/trainer/detail.html
+++ b/trainer/templates/trainer/detail.html
@@ -69,7 +69,7 @@
             <div class="tab-section">
                 <ul class="nav nav-tabs flat-tabs">
                     <li class="active"><a data-toggle="tab" href="#timeline"><i class="icon-visibility"></i> Timeline</a></li>
-                    <li><a data-toggle="tab" href="#trainings"><i class="icon-insert_invitation"></i> Scheduled Trainings</a></li>
+                    <!--<li><a data-toggle="tab" href="#trainings"><i class="icon-insert_invitation"></i> Scheduled Trainings</a></li>-->
                     <li><a data-toggle="tab" href="#work"><i class="icon-card_travel"></i> Work Experience</a></li>
                     <li><a data-toggle="tab" href="#about"><i class="icon-person"></i> About</a></li>
                 </ul>
