date in message listis formatted

--- a/trainer/templates/trainer/detail.html
+++ b/trainer/templates/trainer/detail.html
@@ -31,9 +31,9 @@
                         {% endfor %}
                         </tbody>
                     </table>
-                    <div class="text-right more-skills">
+                    <!-- <div class="text-right more-skills">
                         <a href="" data-toggle="modal" data-target="#allSkills">+ 24 Skills</a>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
