About us details added

--- a/trainer/templates/trainer/index.html
+++ b/trainer/templates/trainer/index.html
@@ -60,10 +60,11 @@
                         <img src="{% static 'trainer/img/icons.png' %}" class="img-responsive tablet-img">
       </div>
                         <div class="col-sm-12 col-md-6 col-lg-6" data-aos="fade-left" data-aos-duration="1500">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                                totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                            <p>Trainourstaff.com began in 2019. A common platform which faciliate organizations to find trainers to train their staff on different aspects like communication, computer skills, customer service, human relations, safety, quality management, benchmarking and in many other ways.
+</p>
+                            <p>We come up with this idea after a depth market research to understand what is essential for employees satisfaction, motivation, financial gain and what could help to reduce employee turnover, enhance company image and help in risk management. The outcome of this is Trainourstaff.com
+</p>
+                            <p>Trainourstaff.com is a network of professional trainers who are expert in employee training.</p>
                         </div>
                     </div>
                 </div>
